# housekeeping

./: .gitignore  .housekeeping.toml  AGENTS.md  CHANGELOG.md  DESIGN.md  README.md  action.yml  pyproject.toml  t.ts  todo.txt
.claude-plugin/: marketplace.json  plugin.json
.githooks/: README.md  pre-commit
.github/workflows/: auto-update-pr-branches.yml  ci.yml  housekeeping.yml  request-conflict-rebase.yml  straitjacket.yml
notes/: design.md  fleet-policy-test-layout-and-coverage.md
scripts/: dev.sh
skills/housekeeping/: SKILL.md
skills/readme-review/: SKILL.md
skills/tidy-up/: SKILL.md
src/housekeeper/: captain.py  ci_versions.py  cli.py  config.py  context.py  dashboard.py  (+5 more)
tests/: conftest.py  test_action_badge.py  test_action_mode.py  test_allow_auto_merge.py  test_artifacts_built.py  test_audit_fleet.py  test_auto_update_pr_branches.py  test_captain.py  test_changelog.py  test_ci.py  test_ci_continue_on_error.py  test_ci_exists_fix_guard.py  test_ci_exists_scripts.py  test_ci_green.py  test_ci_job_timeout.py  test_ci_scheduled_run.py  test_ci_scoped.py  test_ci_versions.py  test_codeowners.py  test_codespell.py  test_config.py  test_context.py  test_conventional_commits.py  test_coverage.py  test_dashboard.py  test_dependabot.py  test_dependabot_automerge.py  test_detect.py  test_lockfiles.py  test_multilang.py  test_new_checks.py  test_pinned_versions.py  test_pr_context.py  test_readme.py  test_readme_quality.py  test_repo_meta.py  test_reproducible_toolchain.py  test_request_conflict_rebase.py  test_required_checks.py  test_retry_masking.py  (+12 more)
(+45 files in other folders)
