[project]
name = "housekeeper"
version = "1.0.0"
description = "Checks that a GitHub repo is in good order"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
housekeeper = "housekeeper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/housekeeper"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0.12.20260518",
]
